[package]
name = "pussy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = [ "derive" ] }
crossterm = "0.27.0"
env_logger = "0.10.0"
log = "0.4.20"
naga = { version = "0.13.0", features = [ "validate" ] }
notify = "6.1.1"
pollster = "0.3.0"
wgpu = { version = "0.17.0", features = [ "glsl" ] }
winit = "0.28.6"
