[package]
name = "pussy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = [ "derive" ] }
chrono = { version = "0.4.31", default-features = false, features = [ "std", "clock" ] }
crossterm = { version = "0.27.0", default-features = false }
env_logger = "0.10.0"
image = "0.24.7"
log = "0.4.20"
naga = { version = "*", features = [ "validate", "wgsl-in" ] }
notify = "6.1.1"
tokio = { version = "1.33.0", default-features = false, features = [ "sync", "rt-multi-thread" ] }
wgpu = "*"
wgpu_text = "0.8.5"
winit = "0.28.6"
